main.css
#nav-mobile {
  background-color: #ffffff;
}

h1 {
  margin-bottom: 1rem;
}

@media (min-width: 1000px) {
  h1 {
    font-size: 48px;
  }
}

h4 {
  font-size: 17px;
}

@media (min-width: 1000px) {
  h4 {
    font-size: 20px;
  }
}

p {
  font-size: 14px;
}

@media (min-width: 1000px) {
  p {
    font-size: 17px;
  }
}

.nav ul {
  -webkit-transition: 250ms;
  transition: 250ms;
}

@-webkit-keyframes fadein {
  0% {
    -webkit-transform: translateY(-2vh);
            transform: translateY(-2vh);
    opacity: 0;
  }
  100% {
    -webkit-transform: translateY(0);
            transform: translateY(0);
    opacity: 1;
  }
}

@keyframes fadein {
  0% {
    -webkit-transform: translateY(-2vh);
            transform: translateY(-2vh);
    opacity: 0;
  }
  100% {
    -webkit-transform: translateY(0);
            transform: translateY(0);
    opacity: 1;
  }
}

@-webkit-keyframes fadein-up {
  0% {
    opacity: 0;
    -webkit-transform: translateY(2.5vh);
            transform: translateY(2.5vh);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateY(0);
            transform: translateY(0);
  }
}

@keyframes fadein-up {
  0% {
    opacity: 0;
    -webkit-transform: translateY(2.5vh);
            transform: translateY(2.5vh);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateY(0);
            transform: translateY(0);
  }
}

@-webkit-keyframes fadein-right {
  0% {
    opacity: 0;
    -webkit-transform: translateX(-10vh);
            transform: translateX(-10vh);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateX(0);
            transform: translateX(0);
  }
}

@keyframes fadein-right {
  0% {
    opacity: 0;
    -webkit-transform: translateX(-10vh);
            transform: translateX(-10vh);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateX(0);
            transform: translateX(0);
  }
}

@-webkit-keyframes fadein-left {
  0% {
    opacity: 0;
    -webkit-transform: translateX(3vh);
            transform: translateX(3vh);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateX(0);
            transform: translateX(0);
  }
}

@keyframes fadein-left {
  0% {
    opacity: 0;
    -webkit-transform: translateX(3vh);
            transform: translateX(3vh);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateX(0);
            transform: translateX(0);
  }
}

Fade in classes .fadein {
  -webkit-animation: fadein 500ms linear 0.25ms 1 alternate both;
          animation: fadein 500ms linear 0.25ms 1 alternate both;
}

.fadein-up {
  -webkit-animation: fadein-up 750ms cubic-bezier(0.37, 1.07, 0.51, 1.31) 1 alternate both;
          animation: fadein-up 750ms cubic-bezier(0.37, 1.07, 0.51, 1.31) 1 alternate both;
}

.fadein-right {
  -webkit-animation: fadein-right 750ms cubic-bezier(0.37, 1.07, 0.51, 1.31) 1 alternate both;
          animation: fadein-right 750ms cubic-bezier(0.37, 1.07, 0.51, 1.31) 1 alternate both;
}

.fadein-left {
  -webkit-animation: fadein-left 750ms cubic-bezier(0.37, 1.07, 0.51, 1.31) 1 alternate both;
          animation: fadein-left 750ms cubic-bezier(0.37, 1.07, 0.51, 1.31) 1 alternate both;
}

@use 'colours';
.menu-icon {
  -ms-grid-column-align: end;
      justify-self: end;
  position: relative;
  width: 30px;
  height: 20px;
  cursor: pointer;
}

@media (min-width: 700px) {
  .menu-icon {
    display: none;
  }
}

.menu-icon span {
  position: absolute;
  display: block;
  width: 30px;
  height: 5px;
  background-color: #434343;
  border-radius: 2px;
  -webkit-transform: rotate(0);
          transform: rotate(0);
  -webkit-transition: all 200ms cubic-bezier(0.58, -0.33, 0.51, 1.35);
  transition: all 200ms cubic-bezier(0.58, -0.33, 0.51, 1.35);
}

.menu-icon span.one {
  top: 0;
}

.menu-icon span.two {
  bottom: 0;
}

.clicked .one {
  -webkit-transform: translateY(7.5px) rotate(45deg);
          transform: translateY(7.5px) rotate(45deg);
}

.clicked .two {
  -webkit-transform: translateY(-7.5px) rotate(-45deg);
          transform: translateY(-7.5px) rotate(-45deg);
}

.link {
  position: relative;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  text-decoration: none;
}

.link::after {
  content: "";
  position: absolute;
  margin: auto;
  background: #434343;
  opacity: 0;
  -webkit-transition: 250ms;
  transition: 250ms;
}

.link:hover::after {
  opacity: 1;
  -webkit-transform: translate(0);
          transform: translate(0);
}

.link::after {
  left: 0;
  right: 0;
  bottom: -2px;
  width: 100%;
  background: #434343;
  height: 2px;
  -webkit-transform: translateY(5px);
          transform: translateY(5px);
}

.link-list {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
  list-style: none;
}

.text-name {
  -ms-grid-column-align: start;
      justify-self: start;
  font-size: 32px;
  font-weight: 600;
  text-decoration: none;
}

@media (min-width: 1000px) {
  .text-name {
    font-size: 36px;
  }
}

.text-nav-desktop {
  font-size: 18px;
}

.text-nav-mobile {
  font-size: 24px;
}

.line {
  width: 2px;
  height: 30vh;
  -ms-grid-column-align: center;
      justify-self: center;
  background-color: #c53838;
}

.line.one {
  margin-top: 15vh;
}

.line.two {
  margin-top: 35vh;
}

body {
  background: -webkit-gradient(linear, left top, right top, color-stop(1%, #f6f6f6), color-stop(1%, transparent)) 1px 0, #ffffff;
  background: linear-gradient(90deg, #f6f6f6 1%, transparent 1%) 1px 0, #ffffff;
  background-size: 20vw 2px;
}

@media (min-width: 1000px) {
  body {
    background-size: 16.66vw 1px;
  }
}

* {
  padding: 0;
  margin: 0;
  scroll-behavior: smooth;
  color: #434343;
  font-family: Helvetica;
}

body {
  position: relative;
  display: -ms-grid;
  display: grid;
  width: 100vw;
  min-height: 100vh;
}

nav {
  position: fixed;
  top: 0;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  place-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  width: 100%;
  z-index: 999;
}

.nav {
  display: -ms-grid;
  display: grid;
  justify-items: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -ms-grid-columns: 1fr max-content;
      grid-template-columns: 1fr -webkit-max-content;
      grid-template-columns: 1fr max-content;
  z-index: 1;
  padding: 1.5rem 2rem;
  width: 100%;
}

.nav ul {
  display: none;
  -ms-grid-column-align: end;
      justify-self: end;
  -webkit-transform: scale(1, 1);
          transform: scale(1, 1);
}

.nav ul.active {
  -webkit-transform: scale(0, -0.5);
          transform: scale(0, -0.5);
}

@media (min-width: 700px) {
  .nav ul {
    display: block;
  }
}

.nav li {
  display: inline;
  margin-left: 1.5rem;
}

@media (min-width: 1000px) {
  .nav {
    max-width: 1440px;
  }
}

#nav-mobile {
  -ms-grid-columns: (1fr)[3];
      grid-template-columns: repeat(3, 1fr);
  position: fixed;
  top: 0;
  right: -100%;
  width: 100vw;
  height: 100vh;
  display: -ms-grid;
  display: grid;
  -webkit-transition: 250ms cubic-bezier(0.5, 1.04, 0.69, 0.95);
  transition: 250ms cubic-bezier(0.5, 1.04, 0.69, 0.95);
}

#nav-mobile.show {
  right: 0;
}

#nav-mobile ul {
  margin: 0 1rem 15vh 0;
  -ms-flex-item-align: end;
      -ms-grid-row-align: end;
      align-self: end;
  -ms-grid-column: 3;
  grid-column: 3;
}

#nav-mobile li {
  margin: 2rem 0 0 0;
}

@media (min-width: 700px) {
  #nav-mobile {
    display: none;
  }
}

.container-page {
  -ms-grid-column-align: center;
      justify-self: center;
  width: 100%;
  height: 100vh;
  position: absolute;
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: auto (minmax(0, 1fr))[4] auto;
      grid-template-columns: auto repeat(4, minmax(0, 1fr)) auto;
  -webkit-column-gap: 16px;
          column-gap: 16px;
  z-index: -1;
  opacity: 0;
  overflow: scroll;
}

.container-page.active {
  z-index: 1;
  opacity: 1;
}

@media (min-width: 700px) {
  .container-page {
    -webkit-column-gap: 24px;
            column-gap: 24px;
  }
}

@media (min-width: 1000px) {
  .container-page {
    -ms-grid-columns: auto (minmax(0, 1fr))[8] auto;
        grid-template-columns: auto repeat(8, minmax(0, 1fr)) auto;
  }
}

.home {
  -ms-grid-rows: 1fr max-content max-content max-content 1fr;
      grid-template-rows: 1fr -webkit-max-content -webkit-max-content -webkit-max-content 1fr;
      grid-template-rows: 1fr max-content max-content max-content 1fr;
  row-gap: 32px;
}

@media (min-width: 1000px) {
  .home {
    -ms-grid-rows: (minmax(0, 1fr))[8];
        grid-template-rows: repeat(8, minmax(0, 1fr));
  }
}

.text-container {
  -ms-grid-column: 2;
  -ms-grid-column-span: 4;
  grid-column: 2 / 6;
  -ms-grid-row: 2;
  grid-row: 2;
  -ms-grid-column-align: center;
      justify-self: center;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
}

@media (min-width: 1000px) {
  .text-container {
    -ms-grid-column: 3;
    -ms-grid-column-span: 2;
    grid-column: 3 / 5;
    -ms-grid-row: 4;
    -ms-grid-row-span: 2;
    grid-row: 4 / 6;
    -ms-flex-item-align: end;
        -ms-grid-row-align: end;
        align-self: end;
  }
}

.button-cta {
  -ms-grid-column-align: center;
      justify-self: center;
  -ms-grid-column: 3;
  -ms-grid-column-span: 2;
  grid-column: 3 / 5;
  -ms-grid-row: 3;
  grid-row: 3;
  padding: 1.5vh 6vw;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
  color: #f6f6f6;
  border: solid #c53838;
  background-color: #c53838;
  font-weight: 500;
  letter-spacing: 1px;
  -webkit-transition: 250ms;
  transition: 250ms;
  cursor: pointer;
}

@media (min-width: 1000px) {
  .button-cta {
    padding: 1.5vh 2vw;
    -ms-grid-row: 6;
    -ms-grid-row-span: 1;
    grid-row: 6 / 7;
    font-size: 20px;
  }
}

.button-cta:hover {
  background-color: #434343;
  border-color: #434343;
}

.homepic {
  -ms-grid-column: 2;
  -ms-grid-column-span: 4;
  grid-column: 2 / 6;
  -ms-grid-row: 4;
  grid-row: 4;
  -ms-flex-item-align: center;
      -ms-grid-row-align: center;
      align-self: center;
  width: 100%;
  -webkit-clip-path: polygon(40% 0, 100% 0, 100% 80%, 60% 100%, 0 100%, 0 20%);
          clip-path: polygon(40% 0, 100% 0, 100% 80%, 60% 100%, 0 100%, 0 20%);
  -webkit-transition: .25s;
  transition: .25s;
}

.homepic:hover {
  -webkit-transform: rotate(-5deg);
          transform: rotate(-5deg);
}

@media (min-width: 1000px) {
  .homepic {
    -ms-grid-column: 5;
    -ms-grid-column-span: 4;
    grid-column: 5 / 9;
    -ms-grid-row: 3;
    -ms-grid-row-span: 4;
    grid-row: 3 / 7;
  }
}
/*# sourceMappingURL=main.css.map */

